--- a/.gitignore
+++ b/.gitignore
@@ -4,18 +4,7 @@
 Icon
 ._*
 
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
-npm-debug.log
 node_modules
+
+.codekit-cache
+.sass-cache
