--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
+# OSX
 .DS_Store
 .AppleDouble
 .LSOverride
 Icon
 ._*
+.Spotlight-V100
+.Trashes
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-node_modules
+# Node
+npm-debug.log
+node_modules/
 
-.codekit-cache
-.sass-cache
-
+# Certs
 certs/
