--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
 		"gulp": "3.8.7",
 		"gulp-concat": "2.3.4",
 		"gulp-notify": "1.5.0",
-		"gulp-clean": "0.3.1",
+		"gulp-rimraf": "0.1.0",
 		"gulp-ruby-sass": "0.7.1",
-		"gulp-autoprefixer": "0.0.9",
 		"gulp-uglifyjs": "0.4.2"
 	},
 	"main": "app.js"
