--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.2",
 	"private": "true",
 	"dependencies": {
+		"node-uuid": "1.4.1",
 		"ws": "0.4.32",
 		"gulp": "3.8.7",
 		"gulp-concat": "2.3.4",
