--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "chatting",
-    "private": true,
-    "dependencies": {
-		"node-uuid": "*",
-		"ws": "*",
-        "del": "*",
-        "gulp": "*",
-        "gulp-ruby-sass": "*",
-        "gulp-autoprefixer": "*",
-        "gulp-minify-css": "*",
-        "gulp-concat": "*",
-        "gulp-jshint": "*",
-        "jshint-stylish": "*",
-        "gulp-uglify": "*"
-    },
-    "main": "app.js"
+  "name": "play",
+  "version": "1.0.0",
+  "devDependencies": {
+    "babel-core": "^5.8.22",
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.0.4",
+    "jquery": "^2.1.4",
+    "ractive": "^0.7.3",
+    "random-string": "^0.1.2",
+    "systemjs": "^0.18.11",
+    "systemjs-builder": "^0.13.3",
+    "traceur": "0.0.91"
+  },
+  "dependencies": {
+    "socket.io": "^1.3.6",
+    "socket.io-client": "^1.3.6"
+  }
 }
